# qa_guru_4_HW_19

./: .env  .gitignore  conftest.py  pyproject.toml
BaseSession/: BaseSession.py
Objects/: User.py
Steps/: ApiSteps.py  Step.py  UISteps.py
Test/: test_SW.py  test_user.py
models/: usermodel.py
steps/: apisteps.py  step.py
test/: test_SW.py  test_user.py
